final doc iteration