@@ -57,12 +57,14 @@ def getCountryCodeIndirect(futurePerson: Future[Person]): Future[Option[String]]
   }
 ```
 
-we would like to be able to express the same program in a direct style
+We would like to be able to express the same program in a direct style where instead of
+returning a `Future[Option[String]]` we return just `String`.
 
 ```scala
 import scala.concurrent.Future
 
-suspend def getCountryCodeDirect(futurePerson: Future[Person])(using Control[NotFound.type | None.type]): String =
+suspend def getCountryCodeDirect(futurePerson: Future[Person])
+     (using Structured, Control[NotFound.type | None.type]): String =
   val person = futurePerson.bind
   val address = person.address.bind
   val country = address.country.bind
@@ -78,14 +80,19 @@ Invoking `getCountryCodeDirect` returns a `String` but until `Control` is resolv
 We can take it further and simplify if `bind` is defined as `apply`:
 
 ```scala
-suspend def getCountryDirect2(futurePerson: Future[Person])(using Control[NotFound.type | None.type]): String =
+suspend def getCountryDirect2(futurePerson: Future[Person])
+     (using Structured, Control[NotFound.type | None.type]): String =
   futurePerson().address().country().code()
 ```
 
-## Status Quo
+## Status Quo & Alternatives
 
 In Scala, interleaving monadic data types in a direct style (including `Future` and lazy `IO`) is impossible.
 Despite context functions and the upcoming capture checking system, Scala lacks an underlying system such as Kotlin continuations or Java LOOM, where functions can suspend and resume computations.
+
+Other projects such as [dotty-cps-async](https://github.com/rssh/dotty-cps-async) or [Monadless](https://github.com/monadless/monadless)
+provide similar syntactic sugar for monads and do a great job about it.
+We have enjoyed using these libraries, but after trying native language support for these features in Kotlin, we decided to propose a deeper integration that works over function declarations and not just expressions.
 
 ### Other communities and languages
 
@@ -126,6 +133,10 @@ In the function `countryCode`, calls to `bind` are calls to suspended functions 
 When a program reaches a suspension point, the underlying continuation may have suspended, performed some work, and resumed back to the original control flow when ready.
 The continuation can perform this background work without blocking the caller.
 
+### Use cases
+
+#### Removing callbacks
+
 In the example below, we can define `bind`, a function that returns `A` from a `Future[A]` without blocking.
 
 ```scala
@@ -152,42 +163,81 @@ trait Continuation[A]:
 // compiler generated platform dependent implementation for Continuation
 suspend def continuation[A](c: Continuation[A] => Unit): A =
   ???
-```  
+``` 
 
-## bind Use case
+#### Structured concurrency
 
-More complex abstractions can be derived from continuations.
-One of them is monad bind. Here monad bind has the shape `F[A] => A`. Once we have a function like `bind`, we can extract `A`
-without needing to `map` over `F`. If we encounter a failure case at any point, we will not get `A`, and our program
-short-circuits up to the nearest `Control` in the same way exceptions work.
+Once we have continuations available we can build structured blocks. These blocks guarantee asynchronous tasks spawned inside complete
+before the block is exited either with a successful result or an exception.
 
-```scala
-extension [R, A](fa: Either[R, A]) 
-  suspend def bind(using Control[R]): A = 
-    fa.fold(_.shift, identity) //shifts on left
-
-extension [A](fa: Option[A])
-  suspend def bind(using Control[None.type]): A = 
-    fa.fold(None.shift)(identity) //shifts on None
-```
-
-We can safely combine our types with `bind` in the same scope.
-`shift` allows us to escape the continuation in case we encounter a `Left` or `None`.
-
-Now that we have the implementations for `bind` we can express `countryCode` in a direct, non-blocking style.
+The following example uses project LOOM dependencies with Scala 3 and wraps their structured concurrency implementation.
+If we don't depend on LOOM this example would be blocking each time the fibers are joined.
+If continuations where available, we could use them to avoid blocking and have other impls outside of LOOM and the JVM.
+Compiling and running this code requires VM args `--add-modules jdk.incubator.concurrent` and a [build of JDK 19 with LOOM](https://jdk.java.net/loom/).
 
 ```scala
-def getCountryCodeDirect(futurePerson: Future[Person])(using Control[NotFound.type | None.type]): String =
-  val person = futurePerson.bind //throws if fails to complete (we don't want to control this)
-  val address = person.address.bind //shifts on Left
-  val country = address.country.bind //shifts on None
-  country.code.bind //shifts on None
+import jdk.incubator.concurrent.StructuredTaskScope
+import scala.annotation.implicitNotFound
+import java.util.concurrent.*
+
+@implicitNotFound(
+  "Structured concurrency requires capability:\n% Structured"
+)
+opaque type Structured = StructuredTaskScope[Any]
+
+extension (s: Structured)
+  private[fx] def forked[A](callable: Callable[A]): Future[A] =
+    s.fork(callable)
+
+inline def structured[B](f: Structured ?=> B): B =
+  val scope = new StructuredTaskScope[Any]()
+  given Structured = scope
+  try f
+  finally
+    scope.join
+    scope.close()
+
+private[fx] inline def callableOf[A](f: () => A): Callable[A] =
+  new Callable[A] { def call(): A = f() }
+
+opaque type Fiber[A] = Future[A]
+
+extension [A](fiber: Fiber[A])
+  def join: A = fiber.get // this is non-blocking in LOOM
+  def cancel(mayInterrupt: Boolean = true): Boolean =
+     fiber.cancel(mayInterrupt)
+
+def fork[B](f: () => B)(using structured: Structured): Fiber[B] =
+   structured.forked(callableOf(f))
 ```
+
+Structured blocks are resources that when they get closed, they join all fibers that were created within the block.
+
+We can implement different policies with structured concurrency, such as:
+   - Shutdown on failure
+   - Shutdown on success
+   - Control the number of fibers to join or parallelism level.
+
+In the program below all fibers are joined before the `structured` block exits.
+
+```scala
+    val x: Control[Int] ?=> Structured ?=> String =
+      val fa = fork[String](() => "Hello")
+      val fb = fork[String](() => 0.shift)
+      fa.join + fb.join
+
+    val value: String | Int = run(structured(x)) 
+```
+
+
+#### Functional programming based on continuation folding
+
+Many functional patterns such as safe error handling can be derived from continuations.
 
 `Control` implements the classic `Control/shift` from continuations literature to demonstrate an application of continuations and exceptions for safe functional error handling.
 
 We can think of a continuation as a program producing `A` or a `Throwable`, but when it's using `Control`, it may be interrupted at any point with a value of `R`.
-`Control` provides `shift` the operation that allows interruption analogous to the imperative `throw`:
+`Control` provides `shift` the operation that allows interruption analogous to the imperative `throw` but it's not restricted to `Throwable`.
 
 ```scala
 trait Control[-R]: //can potentially be implemented in terms of `canThrow`
@@ -243,8 +293,8 @@ object Continuation:
 ```
 
 In the implementation above, `program`, `recover` and `transform` are all suspended functions.
-We can `try`/`catch` over them because they are suspension points, and they guarantee control flow will return to the caller either
-through a result or an exception in the case of `shift`, yet the work performed may go async, get scheduled, or sleep, all in a non-blocking way.
+We can `try`/`catch` over them because they are suspension points, and they guarantee control flow will return to the caller either with a result or an exception. 
+The work performed may go async, get scheduled, or sleep, all in a non-blocking way.
 
 `run` and other similar operators that fold the program look like:
 
@@ -264,6 +314,35 @@ For a full impl with more operators and abstractions,
 see [EffectScope](https://github.com/arrow-kt/arrow/blob/main/arrow-libs/core/arrow-core/src/commonMain/kotlin/arrow/core/continuations/EffectScope.kt) the equivalent to `Control` and
 [`fold`](https://github.com/arrow-kt/arrow/blob/main/arrow-libs/core/arrow-core/src/commonMain/kotlin/arrow/core/continuations/Effect.kt#L760) impl in Arrow.
 
+Once we have the ability to `Control` and `shift` we can implement monad bind for types like `Either` and `Option`. 
+Here monad bind has the shape `F[A] => A`. Once we have a function like `bind`, we can extract `A`
+without needing to `map` over `F`. If we encounter a failure case at any point, we will not get `A`, and our program
+short-circuits up to the nearest `Control` in the same way exceptions work.
+
+```scala
+extension [R, A](fa: Either[R, A]) 
+  suspend def bind(using Control[R]): A = 
+    fa.fold(_.shift, identity) //shifts on Left
+
+extension [A](fa: Option[A])
+  suspend def bind(using Control[None.type]): A = 
+    fa.fold(None.shift)(identity) //shifts on None
+```
+
+We can safely compose unrelated types with `bind` in the same scope.
+`shift` allows us to escape the continuation in case we encounter a `Left` or `None`.
+
+With the implementations for `bind` we can express now `countryCode` in a direct, non-blocking style.
+
+```scala
+def getCountryCodeDirect(futurePerson: Future[Person])
+    (using Structured, Control[NotFound.type | None.type]): String =
+  val person = futurePerson.bind //throws if fails to complete (we don't want to control this)
+  val address = person.address.bind //shifts on Left
+  val country = address.country.bind //shifts on None
+  country.code.bind //shifts on None
+```
+
 Monadic values compose in the same scope delegating their computation to the underlying continuation.
 There is no need for wrapped return types, monad transformers, or stacked types to model a sequential computation composed of unrelated monadic types.
 
@@ -272,11 +351,23 @@ We don't propose `bind` or `Control` as part of this proposal, just intrinsics f
 Finally, we have used `using` clauses to model functions with effects or context functions to model programs as values with
 `given` effect requirements.
 
-## Other use cases
+#### Is the answer Traverse?
 
-We have taken a couple from the original [coroutines proposal](https://github.com/Kotlin/KEEP/blob/master/proposals/coroutines.md#use-cases) and adapted them to Scala to show how we may use continuations for more than just effects or async operations.
+In this model `traverse` can be simply defined as `map` + `bind`.
 
-## Non-blocking sleep
+```scala
+@main def program2 =
+  val test: Structured ?=> Control[String] ?=> List[Int] =
+    List(Right(1), Right(2), Left("oops")).map(x => x.bind)
+  println(run(structured(test))) // oops
+
+@main def program3 =
+  val test: Structured ?=> Control[String] ?=> List[Int] =
+    List(Right(1), Right(2), Right(3)).map(x => x.bind + 1)
+  println(run(structured(test))) // List(2, 3, 4)
+```
+
+#### Non-blocking sleep
 
 Since continuations don't block, we can schedule their completion and resume them when needed.
 
@@ -287,20 +378,22 @@ private val executor = Executors.newSingleThreadScheduledExecutor((runnable: Run
   thread
 })
 
-suspend def sleep(time: Long): Unit = continuation { c =>
+suspend def sleepMillis(time: Long): Unit = continuation { c =>
   val task = new Runnable:
     override def run(): Unit = c.resume(())
   executor.schedule(task, time, TimeUnit.MILLISECONDS)
 }
 ```
 
-### Generators
+[kotlin example](https://github.com/Kotlin/KEEP/blob/master/proposals/coroutines.md#non-blocking-sleep)
+
+#### Generators
 
 Operators such as `yield` are helpful in generators that suit stream processing.
 In this model, only when the caller requests an element `yield` computes it and offers it back.
 
 ```scala
-val fibonacci: MutableLazyList[Int] = lazyList {
+val fibonacci: LazyList[Int] = lazyList { //suspend lambda
     yield(1) // first Fibonacci number (suspension point)
     var cur = 1
     var next = 1
@@ -312,14 +405,13 @@ val fibonacci: MutableLazyList[Int] = lazyList {
 }
 ```
 
+[kotlin example](https://github.com/Kotlin/KEEP/blob/master/proposals/coroutines.md#generators)
 
-## Alternative community initiatives
+## Additional information
 
-Other projects such as [dotty-cps-async](https://github.com/rssh/dotty-cps-async) or [Monadless](https://github.com/monadless/monadless)
-provide similar syntactic sugar for monads and do a great job about it.
-We have enjoyed using these libraries, but after trying native language support for these features in Kotlin, we decided to propose a deeper integration that works over function declarations and not just expressions.
+The text for this pre-sip and the code are available in this [gist](https://gist.github.com/raulraja/e75ba94e6d21f7ec1016d2cb62e03803)
 
-## Improvements
+## Next steps
 
 We believe that introducing continuations in Scala 3 coupled or not to the capture checking system or context function results in the following improvements:
 
@@ -327,8 +419,9 @@ We believe that introducing continuations in Scala 3 coupled or not to the captu
 - Helps inference and compile times due to reducing the usage of complex types.
 - Cooperates with the language control structures and produces smaller and faster programs that desugar suspension points efficiently in the stack.
 - Eases the learning curve to program async / effects-based applications and libraries in Scala.
-- Reduces indirection through higher-order functions used extensively in `map`, `flatMap`, and others.
+- Reduces indirection and allocations that arise through higher-order functions used extensively in `map`, `flatMap`, and others.
 - Can interop with other libraries and frameworks that offer custom fiber scheduling and cancellation strategies.
 
 Looking forward to your thoughts and feedback, thank you for reading this far! :pray:
+
 
